--- a/pasta_carrinho/carrinho.html
+++ b/pasta_carrinho/carrinho.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Carrinho</title>
+    <link rel="stylesheet" href="/pasta_carrinho/carrinho.css">
+</head>
+<body>
+<header>
+    <h1 class="logo">Pizzaria VVC - Carrinho</h1>
+</header>
+
+<main>
+    <h2>Sua pizza de: <span id="saborPizza1"></span> / <span id="saborPizza2"></span></h2>
+    <h2>Borda: <span id="saborBordaCarrinho"></span></h2>
+    <h2>Refrigerante: <span id="saborRefriCarrinho"></span></h2>
+    <h2>Valor total: <span id="somaTotalItens"></span></h2>
+<br>
+    <button onclick="voltar()">Voltar ao cardápio</button>
+</main>
 
 <!-- Nome do cliente -->
 <label for="nome">Seu nome:</label>
@@ -13,3 +33,8 @@
 
 <label for="apartamento">Número do apartamento:</label>
 <input type="text" id="apartamento" name="apartamento" required>
+
+
+<script src="carrinho.js"></script>
+</body>
+</html>
