correcao de um bug no que estava no nome do locasl store

--- a/pasta_cardapio/pagina_cardapio.html
+++ b/pasta_cardapio/pagina_cardapio.html
@@ -139,23 +139,23 @@
 <!-- Escolha do primeiro sabor -->
 <label for="sabor1">Escolha o primeiro sabor:</label>
 <select id="sabor1" name="sabor1" required>
-    <option value="mista" data-preco="29.00">Pizza Mista</option>
-    <option value="calabresa" data-preco="29.00">Pizza Calabresa</option>
-    <option value="frango" data-preco="29.00">Pizza Frango</option>
-    <option value="marguerita" data-preco="32.99">Pizza Marguerita</option>
-    <option value="cala-bacon" data-preco="32.99">Pizza Cala-bacon</option>
-    <option value="frango-catupiry" data-preco="32.99">Pizza Frango com Catupiry</option>
+    <option value="Mista" data-preco="29.00">Pizza Mista</option>
+    <option value="Calabresa" data-preco="29.00">Pizza Calabresa</option>
+    <option value="Frango" data-preco="29.00">Pizza Frango</option>
+    <option value="Marguerita" data-preco="32.99">Pizza Marguerita</option>
+    <option value="Cala-Bacon" data-preco="32.99">Pizza Cala-Bacon</option>
+    <option value="Frango-Catupiry" data-preco="32.99">Pizza Frango com Catupiry</option>
 </select>
 <br><br>
 <!-- Escolha do segundo sabor -->
 <label for="sabor2">Escolha o segundo sabor:</label>
 <select id="sabor2" name="sabor2" required>
-    <option value="mista" data-preco="29.00">Pizza Mista</option>
-    <option value="calabresa" data-preco="29.00">Pizza Calabresa</option>
-    <option value="frango" data-preco="29.00">Pizza Frango</option>
-    <option value="marguerita" data-preco="32.99">Pizza Marguerita</option>
-    <option value="cala-bacon" data-preco="32.99">Pizza Cala-bacon</option>
-    <option value="frango-catupiry" data-preco="32.99">Pizza Frango com Catupiry</option>
+    <option value="Mista" data-preco="29.00">Pizza Mista</option>
+    <option value="Calabresa" data-preco="29.00">Pizza Calabresa</option>
+    <option value="Frango" data-preco="29.00">Pizza Frango</option>
+    <option value="Marguerita" data-preco="32.99">Pizza Marguerita</option>
+    <option value="Cala-Bacon" data-preco="32.99">Pizza Cala-Bacon</option>
+    <option value="Frango-Catupiry" data-preco="32.99">Pizza Frango com Catupiry</option>
 </select>
 <br><br>
 <!-- Opção de borda recheada -->
